# rc_reason_clients_ros

./: .gitlab-ci.yml  LICENSE  README.md
rc_reason_clients/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pytest.ini  setup.py
rc_reason_clients/rc_reason_clients/: cadmatch.py  custom_mappings.py  hand_eye_calib.py  load_carrier.py  message_converter.py  pick.py  rest_client.py  silhouettematch.py  tagdetect.py  transform_helpers.py
rc_reason_clients/scripts/: hand_eye_calib.py  message_converter.py  rc_april_tag_detect_client  rc_boxpick_client  rc_cadmatch_client  rc_hand_eye_calibration_client  rc_itempick_client  rc_load_carrier_client  rc_qr_code_detect_client  rc_silhouettematch_client  rest_client.py
rc_reason_clients/src/rc_reason_clients/: custom_mappings.py  hand_eye_calib.py  load_carrier.py  message_converter.py  pick.py  rest_client.py  silhouettematch.py  tagdetect.py  transform_helpers.py
rc_reason_clients/test/: test_mappings.py
rc_reason_clients/tests/: test_mappings.py
rc_reason_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rc_reason_msgs/msg/: Match.msg
rc_reason_msgs/srv/: CadMatchDetectObject.srv  CalibrateBasePlane.srv  ComputeGrasps.srv  DetectFillingLevel.srv  DetectLoadCarriers.srv  SilhouetteMatchDetectObject.srv
