<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_reason_clients</name>
  <version>0.2.0</version>
  <description>Clients for interfacing with Roboception reason modules on rc_visard and rc_cube.</description>
  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/roboception/rc_reason_clients_ros</url>
  <url type="bugtracker">https://github.com/roboception/rc_reason_clients_ros/issues</url>

  <!-- system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python-requests</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</depend>

  <depend>rospy</depend>
  <depend>message_runtime</depend>
  <depend>rc_reason_msgs</depend>
  <depend>ddynamic_reconfigure_python</depend>

  <doc_depend>doxygen</doc_depend>
</package>
