<?xml version="1.0"?>
<package format="2">
  <name>rc_reason_msgs</name>
  <version>0.0.0</version>
  <description>Msg and srv definitions for rc_reason_clients</description>
  <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/roboception/rc_reason_clients_ros</url>
  <url type="bugtracker">https://github.com/roboception/rc_reason_clients_ros/issues</url>

  <!-- system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>rc_common_msgs</depend>

  <doc_depend>doxygen</doc_depend>
</package>
